2006-12-12  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: apply david cournapeau's patch to make
	import_some work properly even when ipythonrc does 
	import_some on empty list (it was an old bug!).

	* UserConfig/ipy_user_conf.py, UserConfig/ipythonrc:
	 Add deprecation note to ipythonrc and a url to wiki
	 in ipy_user_conf.py
	
2006-12-08  Ville Vainio  <vivainio@gmail.com>

	* Extensions/ipy_stock_completers.py.py: fix cd completer 
	to translate /'s to \'s again.
	
	* completer.py: prevent traceback on file completions w/ 
	backslash.
	
	* Release.py: Update release number to 0.7.3b3 for release

2006-12-07  Ville Vainio  <vivainio@gmail.com>

	* Extensions/ipy_signals.py: Ignore ctrl+C in IPython process
	while executing external code. Provides more shell-like behaviour
	and overall better response to ctrl + C / ctrl + break.

	* tools/make_tarball.py: new script to create tarball straight from svn
	(setup.py sdist doesn't work on win32).

	* Extensions/ipy_stock_completers.py: fix cd completer to give up
	on dirnames with spaces and use the default completer instead.

	* Revision.py: Change version to 0.7.3b2 for release.

2006-12-05  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, iplib.py, completer.py: Apply R. Bernstein's
	pydb patch 4 (rm debug printing, py 2.5 checking)

2006-11-30  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/ibrowse.py: Add two new commands to ibrowse:
	"refresh" (mapped to "r") refreshes the screen by restarting the iterator.
	"refreshfind" (mapped to "R") does the same but tries to go back to the same
	object the cursor was on before the refresh. The command "markrange" is
	mapped to "%" now.
	* IPython/Extensions/ibrowse.py: Make igrpentry and ipwdentry comparable.

2006-11-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_debug): new %debug magic to activate the
	interactive debugger on the last traceback, without having to call