@@ -1,0 +1,15 @@
+import os
+
+
+editor = r'q:/opt/np/notepad++.exe'
+
+
+e = os.environ
+
+e['EDITOR'] = editor
+e['VISUAL'] = editor
+
+
+
+
+
